--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,8 @@ fire==0.4.0
 flask==2.0.2
 flask-Cors==3.0.10
 chardet==3.0.4
-nltk==3.4.1
 beautifulsoup4==4.6.0
 zstandard==0.18.0
 flashtext==2.7
-dotmap
+dotmap==1.3.25
+gunicorn==20.1.0
